@@ -24,7 +24,7 @@ requires 'Plack::Request' => 0;
 requires 'Plack::Response' => 0;
 requires 'Plack::Session' => 0;
 requires 'Tags::HTML::Container' => 0;
-requires 'Tags::HTML::Login::Register' => 0.04;
+requires 'Tags::HTML::Login::Register' => 0.08;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Plack-App-Register/issues';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Plack-App-Register';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Plack-App-Register';
